--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "cra-template": "1.1.3",
+    "firebase": "^9.6.9",
     "lodash": "^4.17.21",
     "prettier": "^2.6.0",
     "react": "^17.0.2",
