--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "start": "env-cmd -f .env.dev react-scripts start",
     "start:prod": "env-cmd -f .env.prod react-scripts start",
-    "build": "env-cmd -f .env.dev CI=false react-scripts build",
-    "build:prod": "env-cmd -f .env.prod CI=false react-scripts build",
+    "build": "CI=false env-cmd -f .env.dev react-scripts build",
+    "build:prod": "CI=false env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "npx prettier --write ."
