--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "netlify-lambda": "^1.4.3",
+    "firebase": "^9.6.10",
     "lodash": "^4.17.21",
+    "netlify-lambda": "^1.4.3",
     "nodemon": "^2.0.15",
     "serverless-http": "^2.7.0"
   }
