--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "cra-template": "1.1.3",
+    "crypto-js": "^4.1.1",
     "env-cmd": "^10.1.0",
     "firebase": "^9.6.10",
     "lodash": "^4.17.21",
